PROJECT(OpenSceneGraph-Tut)
CMAKE_MINIMUM_REQUIRED(VERSION 3.14)
#SET(CMAKE_DEBUG_POSTFIX "d" CACHE STRING "add a postfix for Debug mode, usually d on windows")
#IF(COMMAND CMAKE_POLICY)
#CMAKE_POLICY(SET CMP0003 NEW)
#ENDIF(COMMAND CMAKE_POLICY)

IF(WIN32)
IF(MSVC)
ADD_DEFINITIONS(-D_SCL_SECURE_NO_WARNINGS)
ADD_DEFINITIONS(-d_SECURE_NO_DEPRECATE)
ENDIF(MSVC)
ELSE(WIN32)
SET(CMAKE_CXX_FLAGS "-W -Wall -Wno-unused")
ENDIF(WIN32)

FIND_PACKAGE(OpenSceneGraph REQUIRED COMPONENTS osgDB osgGA osgUtil osgViewer osgText)


#apply them to following projects
INCLUDE_DIRECTORIES(${OPENSCENEGRAPH_INCLUDE_DIRS})
# LINK_DIRECTORIES(${OPENSCENEGRAPH_LIBRARIES})

SET(PROJECT_NAME OSG-Tut)

file(GLOB PROJECT_SOURCES src/*.h
                          src/*cpp)

ADD_EXECUTABLE(${PROJECT_NAME} ${PROJECT_SOURCES})
#SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${OPENSCENEGRAPH_LIBRARIES})

# TARGET_LINK_LIBRARIES( ${PROJECT_NAME} OPENTHREADS )
# TARGET_LINK_LIBRARIES( ${PROJECT_NAME} OSG )
# TARGET_LINK_LIBRARIES( ${PROJECT_NAME} OSGDB )
# TARGET_LINK_LIBRARIES( ${PROJECT_NAME} OSGUTIL )
# TARGET_LINK_LIBRARIES( ${PROJECT_NAME} OSGVIEWER )

set (source "${CMAKE_SOURCE_DIR}/Resources")

set (destination "${CMAKE_CURRENT_BINARY_DIR}/Resources")


add_custom_command(
        TARGET ${PROJECT_NAME} POST_BUILD
        COMMAND ${CMAKE_COMMAND} -E copy_directory ${source} ${destination}
        DEPENDS ${destination}
        COMMENT "symbolic link resources folder from ${source} => ${destination}"
)
